# the0

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  artifacthub-repo.yml  index.yaml
.claude/agents/: pyproject.toml
.claude/agents/prompts/: auditor.md  fixer.md
.claude/agents/src/tech_debt_agents/: audit_file.py  auditor.py  cli.py  config.py  fixer.py  lock.py  logging_setup.py  session_guard.py  worktree.py
.claude/agents/tests/: conftest.py  test_audit_file.py  test_session_guard.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/security/: accepted-vulnerabilities.txt
.github/workflows/: analyzer.yml  api.yml  cli.yml  docs.yml  frontend.yml  release-chart.yml  release-cli.yml  runtime.yml  sdk-cpp.yml  sdk-dotnet.yml  sdk-haskell.yml  sdk-nodejs.yml  sdk-python.yml  sdk-rust.yml  sdk-scala.yml  security.yml  the0-ai.yml
api/: .dockerignore  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  drizzle.config.ts  package.json  tsconfig.json
api/scripts/: docker-healthcheck.js
api/src/: app.module.ts  main.ts
api/test/: setup.ts
cli/: .gitignore  .the0ignore.example  CHANGELOG.md  Makefile  README.md  coverage.html  coverage.out  go.mod  go.sum  main.go
cli/PRPs/: backtest-cli-support.md  cli-self-update.md
cli/cmd/: auth.go  backtest.go  bot.go  bot_query.go  check_update.go  custom_bot.go  dev.go  env.go  env_test.go  local.go  local_test.go  self_update.go  update.go  user_bot.go
cli/internal/: api.go  auth.go  builder.go  builder_cpp.go  builder_dotnet.go  builder_haskell.go  builder_haskell_test.go  builder_rust.go  builder_scala.go  config.go  environments.go  environments_test.go  ignore.go  secrets.go  secrets_test.go  updater.go  vendor.go  vendor_frontend.go  vendor_frontend_test.go  vendor_interface.go  vendor_node.go  vendor_node_test.go  vendor_python.go  vendor_python_test.go  vendor_test.go  version.go  zip.go
cli/stories/: backtest-cli-support.md
cli/tests/: api_test.go  auth_test.go  backtest_test.go  bot_test.go  cli_backtest_test.go  cli_test.go  config_test.go  ignore_test.go  integration_update_test.go  local_test.go  updater_test.go  vendor_test.go  version_test.go  zip_test.go
docker/: .env.example  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
docker/images/: Makefile
docs/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  index.md  llms.txt  netlify.toml  next.config.mjs  nginx.conf  package.json  tailwind.config.ts  welcome-to-the0.md
docs/.vitepress/: config.ts
docs/custom-bot-development/: bot-types.md  configuration.md  cpp-quick-start.md  csharp-quick-start.md  custom-frontends.md  deployment.md  haskell-quick-start.md  index.md  metrics.md  nodejs-quick-start.md  overview.md  python-quick-start.md  queries.md  quick-start-guide.md  rust-quick-start.md  scala-quick-start.md  state.md  testing.md
docs/deployment/: admin-bootstrap.md  docker-compose.md  index.md  kubernetes.md
docs/integrations/: index.md  mcp.md
docs/local-development/: debugging.md  faq.md  frontend.md  getting-started.md  index.md  queries.md  runtimes.md  state-and-events.md  watch.md
docs/migration-guides/: index.md  v1-14-root-admin.md
docs/runtime/: docker-mode.md  index.md  kubernetes-mode.md
docs/stories/: infrastructure.md
docs/terminology/: bot-deployment.md  bots.md  custom-bots.md  index.md
docs/the0-cli/: authentication.md  bot-commands.md  custom-bot-commands.md  environments.md  index.md  installation.md  secrets.md
example-bots/: .gitignore  README.md
example-bots/cpp-sma-crossover/: .the0ignore  CMakeLists.txt  README.md  bot-config.yaml  config.json  main.cpp  main_raw.cpp  query.cpp
example-bots/cpp-sma-crossover/frontend/: index.tsx  package.json
example-bots/csharp-sma-crossover/: Program.cs  Program_raw.cs  Query.cs  README.md  SmaBot.csproj  SmaBot.sln  SmaQuery.csproj  bot-config.yaml  config.json
example-bots/haskell-sma-crossover/: .the0ignore  README.md  bot-config.yaml  bot-schema.json  cabal.project  config.json  sma-bot.cabal
example-bots/haskell-sma-crossover/app/: Main.hs  Main_raw.hs  Query.hs
example-bots/haskell-sma-crossover/frontend/: index.tsx  package.json
example-bots/python-portfolio-tracker/: .the0ignore  README.md  bot-config.yaml  bot-schema.json  config.json  main.py  query.py  (+2 more)
example-bots/rust-sma-crossover/: .the0ignore  Cargo.toml  README.md  bot-config.yaml  bot-schema.json  config.json
example-bots/rust-sma-crossover/frontend/: .npmrc  index.tsx  package.json
example-bots/rust-sma-crossover/src/: main.rs
frontend/: .gitignore  CHANGELOG.md  Dockerfile  INITIAL.md  Makefile  jest.config.ts  jest.setup.ts  next.config.mjs  package.json  tailwind.config.ts
k8s/: Chart.yaml  Makefile  README.md  values.yaml
runtime/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  start-application.sh
runtime/internal/fixtures/haskell-test-bot/: README.md  haskell-test-bot.cabal
runtime/internal/fixtures/haskell-test-bot/app/: Main.hs
scripts/: install.sh
sdk/cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  the0.h
sdk/cpp/tests/: CMakeLists.txt  main.cpp  test_metric.cpp  test_parse.cpp  test_query.cpp  test_result.cpp  test_state.cpp  the0_test.cpp
sdk/cpp/tests/helpers/: test_helpers.hpp
sdk/cpp/the0/: query.h  state.h  the0.h
sdk/haskell/: .gitignore  Makefile  README.md  the0-sdk.cabal  the0.cabal
sdk/haskell/src/The0/: Input.hs  Query.hs  State.hs
sdk/haskell/test/: InputSpec.hs  QuerySpec.hs  Spec.hs  StateSpec.hs
sdk/python/: .gitignore  Makefile  README.md  pyproject.toml
sdk/python/the0/: __init__.py  state.py
sdk/rust/: Cargo.toml  Makefile  README.md
sdk/rust/src/: lib.rs  query.rs  state.rs
sdk/rust/tests/: test_metric.rs  test_parse.rs  test_query.rs  test_result.rs
sdk/rust/tests/common/: mod.rs
services/: HEADSTONE.md
site/: CHANGELOG.md  README.md  package.json
(+1193 files in other folders)
