[project]
name = "tech-debt-agents"
version = "0.1.0"
description = "Automated tech debt auditor and fixer agents for the0"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
tech-debt = "tech_debt_agents.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
