[package]
name = "sma-bot"
version = "1.0.0"
edition = "2021"
description = "SMA Crossover trading bot using Rust"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
