[package]
name = "sma-bot"
version = "1.2.2"
edition = "2021"
description = "SMA Crossover trading bot using Rust"

[[bin]]
name = "sma-bot"
path = "src/main.rs"

[[bin]]
name = "sma-query"
path = "src/bin/query.rs"

[dependencies]
# the0 SDK for bot development
the0-sdk = "0.3.1"

# HTTP client and JSON
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging with tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
