cabal-version:      3.0
name:               the0
version:            0.1.0.0
synopsis:           the0 trading bot SDK for Haskell
description:        Utilities for building trading bots on the0 platform.
license:            Apache-2.0
license-file:       LICENSE
author:             the0 team
maintainer:         hello@the0.dev
category:           Development
build-type:         Simple
extra-doc-files:    README.md

library
    exposed-modules:    The0.Input
    build-depends:      base ^>=4.18,
                        aeson ^>=2.2,
                        bytestring ^>=0.11,
                        text ^>=2.0,
                        containers ^>=0.6
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall
