[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the0"
version = "1.0.0"
description = "SDK for building trading bots on the0 platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "the0", email = "hello@the0.dev"}
]
keywords = ["trading", "bots", "algorithmic-trading", "the0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://the0.dev"
Documentation = "https://docs.the0.dev"
Repository = "https://github.com/alexanderwanyoike/the0"

[tool.setuptools.packages.find]
where = ["."]
include = ["the0*"]
