cabal-version:      3.0
name:               haskell-test-bot
version:            0.1.0.0
build-type:         Simple

executable haskell-test-bot
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18,
                      aeson ^>=2.2,
                      bytestring ^>=0.11
    default-language: Haskell2010
    ghc-options:      -Wall -O2
